Created TaskDto DTO class and fully worked updateTask method in controller.